--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -80,7 +80,7 @@
           <div class="col-md-12">
               <div class="card card-chart">
                   <div class="card-header card-header-warning">
-                      <div class="ct-chart" id="TotalEnergyReq" data-x-axis="Time (Hours) " data-y-axis="Energy (W)"></div>
+                      <div class="ct-chart" id="TotalEnergyReq" data-x-axis="Time (Hours) " data-y-axis="Energy (Mwh)"></div>
                   </div>
                   <div class="card-body">
                       <h4 class="card-title">Energy required 50,000 Mwh </h4>
@@ -98,7 +98,7 @@
           <div class="col-md-12">
               <div class="card card-chart">
                   <div class="card-header card-header-success">
-                      <div class="ct-chart" id="SolarEnergy" data-x-axis="Time (Hours) " data-y-axis="Energy (W)"></div>
+                      <div class="ct-chart" id="SolarEnergy" data-x-axis="Time (Hours) " data-y-axis="Solar Energy (GHI)"></div>
                   </div>
                   <div class="card-body">
                       <h4 class="card-title">Solar Energy </h4>
@@ -114,7 +114,7 @@
           <div class="col-md-12">
               <div class="card card-chart">
                   <div class="card-header card-header-info">
-                      <div class="ct-chart" id="WindEnergy" data-x-axis="Time (Hours) " data-y-axis="Energy (W)"></div>
+                      <div class="ct-chart" id="WindEnergy" data-x-axis="Time (Hours) " data-y-axis=" Wind speed (miles/s)"></div>
                   </div>
                   <div class="card-body">
                       <h4 class="card-title">Wind Energy</h4>
