--- a/src/app/home-page/components/home-page/home-page.component.html
+++ b/src/app/home-page/components/home-page/home-page.component.html
@@ -13,13 +13,13 @@
   
       <ul class="nav navbar-nav navbar-center" style="margin-left:500px;">
           <li class="nav-item">
-            <a class="nav-link" [routerLink]= "['/about-us']"  style="color:white"><b>Home</b></a>
+            <a class="nav-link" [routerLink]= "['/homePage']"  style="color:white"><b>Home</b></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/contact-us']" style="color:white"><b>Contact us</b></a>
           </li>
          <li class="nav-item" >
-           <a class="nav-link"  [routerLink]="['/homePage']" style="color:white"><b>About Us</b></a>
+           <a class="nav-link"  [routerLink]="['/about-us']"  style="color:white"><b>About Us</b></a>
           </li>
       </ul>
  
