--- a/src/app/solarEnergy/solarPowerPlant/solarPowerPlant.component.html
+++ b/src/app/solarEnergy/solarPowerPlant/solarPowerPlant.component.html
@@ -158,37 +158,8 @@
       
 
     </div>
-    <br><hr><br>
-    <div class="row">
-        <h3 style="margin-left: 40%;">Photo Gallery </h3> <br>
-    <div class="col-md-6" style="margin-left: 20%;" > 
-        
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="align-items: center;">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100 rounded-sm" src='{{"assets/images/solarPowerPlant/"+solarPowerPlant[urlID].image_src+"/1.jpg"}}' alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100  rounded-sm" src='{{"assets/images/solarPowerPlant/"+solarPowerPlant[urlID].image_src+"/2.jpg"}}' alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100  rounded-sm" src='{{"assets/images/solarPowerPlant/"+solarPowerPlant[urlID].image_src+"/3.jpg"}}' alt="Third slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev " href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-
-    </div>
-            
-</div>
-   <br><br>
+    
+   <br><hr><br>
    <div class="row">
         <div class="col-md-12">
             <div class="card">
@@ -228,9 +199,9 @@
                                 <td style="font-size: large;"> 
                                         {{solarPanel }} % of Solar Panels are in Use
                                         <br><br>
-                                        <!-- <label>Change the Percentage of solar panel in use</label><br>
+                                        <label>Change the Percentage of solar panel in use</label><br>
                                         <input type="number" class="form-control-sm" placeholder="" #solarPanel1  ><br>
-                                        <button type="submit"  class="btn btn-info" (click)="changeSolarChart(solarPanel1.value)">Change</button> -->
+                                        <button type="submit"  class="btn btn-info" (click)="changeSolarChart(solarPanel1.value)">Change</button>
                                 </td> 
                                
                                <td>
@@ -252,6 +223,36 @@
            
         </div>
    </div>
+   <br><hr><br>
+    <div class="row">
+        <h3 style="margin-left: 40%;">Photo Gallery </h3> <br>
+    <div class="col-md-6" style="margin-left: 20%;" > 
+        
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="align-items: center;">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100 rounded-sm" src='{{"assets/images/solarPowerPlant/"+solarPowerPlant[urlID].image_src+"/1.jpg"}}' alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100  rounded-sm" src='{{"assets/images/solarPowerPlant/"+solarPowerPlant[urlID].image_src+"/2.jpg"}}' alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100  rounded-sm" src='{{"assets/images/solarPowerPlant/"+solarPowerPlant[urlID].image_src+"/3.jpg"}}' alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev " href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+    </div>
+            
+</div>
    <br><br>
 </div>
 </div>
