--- a/src/app/home-page/components/contact-us/contact-us.component.html
+++ b/src/app/home-page/components/contact-us/contact-us.component.html
@@ -1,21 +1,28 @@
 <div class="container">
     <section class="page-section clearfix">
         <div class="container">
-          <div class="intro">
-            <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/background/aboutUs.jpg" alt="">
-            <div class="intro-text left-0 text-center bg-faded p-5 rounded jumbotron mySmallerDiv">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Cleaner Energy</span><br>
-                <span class="section-heading-lower">Renewable Resources</span>
-              </h2>
-              <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
-              </p>
-             
-            </div>
-          </div>
-        </div>
-      </section>
-      <br><br><br><br><br> <br><br><br><br><br> <br><br><br><br><br>
+            <div class="intro">
+                <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/background/aboutUs.jpg" alt="">
+                <div class="intro-text left-0 text-center bg-faded p-5 rounded jumbotron mySmallerDiv">
+                    <h2 class="section-heading mb-4">
+                        <span class="section-heading-upper">Cleaner Energy</span><br>
+                        <span class="section-heading-lower">Renewable Resources</span>
+                    </h2>
+                    <p class="mb-3">
 
-   
+                        Renewable resources are part of the renewable natural stock and comprise those resources that
+                        have the potential for re-creation within a given period of time.
+                        <br>
+                        Wind and solar are very convenient, because they can be small-scale.
+                        An out of the way village can use wind and solar for most of its power easily, getting rid of
+                        the need to build expensive power plants.
+                    </p>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <br><br><br><br><br> <br><br><br><br><br> <br><br><br><br><br>
+
+
 </div>
