--- a/src/app/home-page/components/home-page/home-page.component.html
+++ b/src/app/home-page/components/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 
 <div class="home"> 
    <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3" style="color:#fff!important;font-size:5vh;font-weight: bold;">SMART ENERGY SAVER</span><br>
+    <span class="site-heading-upper text-primary mb-3" style="color:#fff!important;font-size:5vh;font-weight: bold;">SMART ENERGY SAVER</span>
     <span class="site-heading-lower">SOLAR AND WIND ENERGY </span>
   </h1>
   <br><br><br>
@@ -30,7 +30,7 @@
  
 <footer class="footer text-faded text-center py-5" style="background-color: rgba(47,23,15,0.9);">
   <div class="container">
-    <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+    <p class="m-80 small">Smart Energy Saver © 2020</p>
   </div>
 </footer>
 
