--- a/src/app/solarEnergy/solarPowerPlant/solarPowerPlant.component.html
+++ b/src/app/solarEnergy/solarPowerPlant/solarPowerPlant.component.html
@@ -201,7 +201,7 @@
                                         <br><br>
                                         <label>Change the Percentage of solar panel in use</label><br>
                                         <input type="number" class="form-control-sm" placeholder="" #solarPanel1  ><br>
-                                        <button type="submit"  class="btn btn-info" (click)="changeSolarChart(solarPanel1.value)">Change</button>
+                                        <button type="submit"  class="btn btn-info" style='padding:10px;margin:5px' (click)="changeSolarChart(solarPanel1.value)">Change</button>
                                 </td> 
                                
                                <td>
