--- a/src/app/home-page/components/home-details/home-details.component.html
+++ b/src/app/home-page/components/home-details/home-details.component.html
@@ -1,26 +1,27 @@
-
-
 <div class="container">
     <section class="page-section clearfix">
         <div class="container">
-          <div class="intro">
-            <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/background/coverImg.jpg" alt="">
-            <div class="intro-text left-0 text-center bg-faded p-5 rounded jumbotron mySmallerDiv">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Cleaner Energy</span><br>
-                <span class="section-heading-lower">Renewable Resources</span>
-              </h2>
-              <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
-              </p>
-              <div class="intro-button mx-auto">
-                <a class="btn  btn-xl mybtn" [routerLink]="['/dashboard']">Visit Us Today!</a>
-              </div>
+            <div class="intro">
+                <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/background/coverImg.jpg" alt="">
+                <div class="intro-text left-0 text-center bg-faded p-5 rounded jumbotron mySmallerDiv">
+                    <h2 class="section-heading mb-4">
+                        <span class="section-heading-upper">Cleaner Energy</span><br>
+                        <span class="section-heading-lower">Renewable Resources</span>
+                    </h2>
+                    <p class="mb-3">   The main benefit however is the fact that we don’t need to “feed” these systems with energy by
+                        mining or other processing.
+                        The input energy is free, and only requires the initial infrastructure to be put into place,
+                        followed by maintenance.
+                    </p>
+                    <div class="intro-button btn-white mx-auto">
+                        <a class="btn  btn-xl mybtn" [routerLink]="['/dashboard']">Visit Us Today!</a>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </section>
+    </section>
 
-   
+
 </div>
 <br><br><br><br><br>
 
@@ -31,15 +32,23 @@
                 <br>
                 <div class="cta-inner text-center rounded jumbotron borderProp">
                     <h2 class="section-heading ">
-                      <span class="section-heading-upper">Our Promise</span><br>
-                      <span class="section-heading-lower">To You</span>
+                        <span class="section-heading-upper">Our Promise</span><br>
+                        <span class="section-heading-lower">To You</span>
                     </h2>
-                    <p >When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
-                  </div>
+                    <p>
+
+                        Renewable resources are part of the renewable natural stock and comprise those resources that
+                        have the potential for re-creation within a given period of time.
+                        <br>
+                        Wind and solar are very convenient, because they can be small-scale.
+                        An out of the way village can use wind and solar for most of its power easily, getting rid of
+                        the need to build expensive power plants.
+                    </p>
                 </div>
-      
             </div>
-            
+
+        </div>
+
     </div>
 </div>
 <br><br><br><br><br>
