--- a/src/app/todaysWeather/todaysWeather.component.css
+++ b/src/app/todaysWeather/todaysWeather.component.css
@@ -19,3 +19,47 @@
     text-align: center;
     transform: rotate(-90deg)translateY(50%);
 }
+
+.btn:link,
+.btn:visited {
+    text-decoration: none;
+    padding: 20px 30px;
+    text-transform: uppercase;
+    border-radius: 100px;
+    display: inline-block;
+    position: relative;
+    transition: all 0.2s;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+
+.btn::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all 0.4s;
+    z-index: -1;
+}
+
+
+
+.btn:hover::after {
+    transform: scaleX(1.5) scaleY(1.7);
+    opacity: 0;
+}
+
