--- a/src/app/windEnergy/windEnergy.component.html
+++ b/src/app/windEnergy/windEnergy.component.html
@@ -7,7 +7,8 @@
                 </p>
             </div>
             <div class="card-body">
-              <div id="map"></div>
+              <!-- <div id="map"></div> -->
+                 <div #mapContainer id="map"></div>  
                 
       <div class="row">
         
@@ -15,7 +16,7 @@
                 <div class="card">
                     <div class="card-header card-header-danger">
                         <h4 class="card-title">Wind Power plant in Karnataka</h4>
-                        <p class="card-category">New employees on 15th September, 2016</p>
+                        <p class="card-category"></p>
                     </div>
                     <div class="card-body table-responsive">
                         <table class="table table-hover">
