--- a/src/app/solarEnergy/solarEnergy.component.html
+++ b/src/app/solarEnergy/solarEnergy.component.html
@@ -9,13 +9,14 @@
           <div class="card-body">
             <!-- <div id="map"></div> -->
             <div #mapContainer id="map"></div>  
+<div id="panel"></div>
             <div class="row">
       
           <div class="col-lg-12 col-md-12">
               <div class="card">
                   <div class="card-header card-header-danger">
                       <h4 class="card-title">Solar Power plant in Karnataka</h4>
-                      <p class="card-category">New employees on 15th September, 2016</p>
+                      <p class="card-category"></p>
                   </div>
                   <div class="card-body table-responsive">
                       <table class="table table-hover">
