dashboard graph range and unit changes

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -83,7 +83,7 @@
                       <div class="ct-chart" id="TotalEnergyReq" data-x-axis="Time (Hours) " data-y-axis="Energy (Mwh)"></div>
                   </div>
                   <div class="card-body">
-                      <h4 class="card-title">Energy required 50,000 Mwh </h4>
+                      <h4 class="card-title">Energy required </h4>
                   
                       <!-- <p class="card-category">
                           <span class="text-success"><i class="fa fa-long-arrow-up"></i> 5% </span> increase in energy demand.</p> -->
@@ -114,7 +114,7 @@
           <div class="col-md-12">
               <div class="card card-chart">
                   <div class="card-header card-header-info">
-                      <div class="ct-chart" id="WindEnergy" data-x-axis="Time (Hours) " data-y-axis=" Wind speed (miles/s)"></div>
+                      <div class="ct-chart" id="WindEnergy" data-x-axis="Time (Hours) " data-y-axis=" Wind speed (miles/hrs)"></div>
                   </div>
                   <div class="card-body">
                       <h4 class="card-title">Wind Energy</h4>
